[package]
name = "bevy_query_macros"
version = "0.2.0-rc2"
edition = "2021"
description = "Bevy query macros"
repository = "https://github.com/ironpeak/bevy_query_macros"
authors = ["Hrafn Orri Hrafnkelsson <hrafn@vidfjord.is>"]
license = "MIT"
readme = "README.md"
keywords = ["bevy", "query", "macros"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.15.0-rc.2", default-features = false }
